Java idomatic code (#792)